tests/baselines/reference/functionOverloads.errors.txt
tests/cases/compiler/functionOverloads.ts(4,13): error TS2345: Argument of type 'number' is not assignable to parameter of type 'string'.


==== tests/cases/compiler/functionOverloads.ts (1 errors) ====
    function foo(): string;
    function foo(bar: string): number;
    function foo(bar?: string): any { return "" };
    var x = foo(5);
                ~
!!! error TS2345: Argument of type 'number' is not assignable to parameter of type 'string'.